fix: properly order contents on mobile layout

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -524,6 +524,19 @@ pre {
   .main-layout {
     display: flex;
     flex-direction: column;
+    gap: calc(2 * var(--universal-margin));
+  }
+
+  .right-column {
+    display: contents;
+  }
+
+  #black-info {
+    order: -1;
+  }
+
+  #chat-area {
+    order: 1;
   }
 
   #resize-handle {
